# libVzl

./: .gitignore  CMakeLists.txt  README.md  c_setup_guide.md  make_build
libVzl/: CMakeLists.txt  Types.c  Types.h
libVzl/algorithm/: CMakeLists.txt  QuickSort.c  QuickSort.h
libVzl/structure/: CMakeLists.txt  Vector.c  Vector.h
libVzl/type/: CMakeLists.txt  Result.c  Result.h
sandbox/: CMakeLists.txt  main.c
